<resources>
    <string name="app_name">Kalviseithi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>



    <string name="action_right1">TNSTUDY</string>
    <string name="action_right2">TNMATERIALS</string>
    <string name="action_right3">TNVELAI</string>
    <string name="action_right4">FACEBOOK</string>
    <string name="action_right5">TWITTER</string>
    <string name="action_right6">WHATSAPP NO </string>
    <string name="action_right7">Teachers Matrimony</string>
    <string name="action_right8">Blood Bank</string>
    <string name="action_right9">Join Hand</string>
    <string name="action_right10">TN TECHNOLOGY</string>
    <string name="action_right11">EXIT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ad_id_banner">ca-app-pub-1408050056630664/5504093183</string>
    <string name="ad_id_interstitial">ca-app-pub-1408050056630664/5204710285</string>

 <!--   <string name="ad_id_banner">ca-app-pub-6812561845972809/8009691810</string>
    <string name="ad_id_interstitial">ca-app-pub-6812561845972809/9649489816</string>
--></resources>
